@@ -1605,6 +1605,17 @@ argument_list|,
 name|numSlices
 argument_list|)
 expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|NEW_COLLECTION
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|async
