@@ -1853,6 +1853,8 @@ argument_list|,
 name|recoverReloadedCores
 argument_list|,
 name|afterExpiration
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 return|return
@@ -2410,6 +2412,8 @@ argument_list|,
 literal|true
 argument_list|,
 literal|true
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -4742,6 +4746,9 @@ parameter_list|,
 specifier|final
 name|CoreDescriptor
 name|desc
+parameter_list|,
+name|boolean
+name|skipRecovery
 parameter_list|)
 throws|throws
 name|Exception
@@ -4756,6 +4763,8 @@ argument_list|,
 literal|false
 argument_list|,
 literal|false
+argument_list|,
+name|skipRecovery
 argument_list|)
 return|;
 block|}
@@ -4777,6 +4786,9 @@ name|recoverReloadedCores
 parameter_list|,
 name|boolean
 name|afterExpiration
+parameter_list|,
+name|boolean
+name|skipRecovery
 parameter_list|)
 throws|throws
 name|Exception
@@ -5251,23 +5263,15 @@ name|didRecovery
 init|=
 name|checkRecovery
 argument_list|(
-name|coreName
-argument_list|,
-name|desc
-argument_list|,
 name|recoverReloadedCores
 argument_list|,
 name|isLeader
 argument_list|,
-name|cloudDesc
+name|skipRecovery
 argument_list|,
 name|collection
 argument_list|,
 name|coreZkNodeName
-argument_list|,
-name|shardId
-argument_list|,
-name|leaderProps
 argument_list|,
 name|core
 argument_list|,
@@ -6044,13 +6048,6 @@ specifier|private
 name|boolean
 name|checkRecovery
 parameter_list|(
-name|String
-name|coreName
-parameter_list|,
-specifier|final
-name|CoreDescriptor
-name|desc
-parameter_list|,
 name|boolean
 name|recoverReloadedCores
 parameter_list|,
@@ -6058,23 +6055,15 @@ specifier|final
 name|boolean
 name|isLeader
 parameter_list|,
-specifier|final
-name|CloudDescriptor
-name|cloudDesc
+name|boolean
+name|skipRecovery
 parameter_list|,
 specifier|final
 name|String
 name|collection
 parameter_list|,
-specifier|final
-name|String
-name|shardZkNodeName
-parameter_list|,
 name|String
 name|shardId
-parameter_list|,
-name|ZkNodeProps
-name|leaderProps
 parameter_list|,
 name|SolrCore
 name|core
@@ -6115,6 +6104,9 @@ condition|)
 block|{
 if|if
 condition|(
+name|skipRecovery
+operator|||
+operator|(
 operator|!
 name|afterExpiration
 operator|&&
@@ -6125,6 +6117,7 @@ argument_list|()
 operator|&&
 operator|!
 name|recoverReloadedCores
+operator|)
 condition|)
 block|{
 name|doRecovery
