@@ -812,6 +812,20 @@ name|normalize
 argument_list|()
 expr_stmt|;
 block|}
+name|boolean
+name|newCollection
+init|=
+name|params
+operator|.
+name|getBool
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|NEW_COLLECTION
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
 name|coreContainer
 operator|.
 name|create
@@ -821,6 +835,8 @@ argument_list|,
 name|instancePath
 argument_list|,
 name|coreParams
+argument_list|,
+name|newCollection
 argument_list|)
 expr_stmt|;
 name|it
